# finalproject_Gafarov_M25_555

./: .gitignore  Makefile  README.md  add_fiat_rates.py  check_all_criteria.sh  check_interface.py  check_project.py  check_user.py  debug_imports.py  demo.cast  final_test.py  final_test.sh  final_test_v2.sh  main.py  pyproject.toml  simple_test.py
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  __main__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py  usecases.py  usecases.py.backup
